# grease

./: .gitlab-ci.yml  AGENTS.md  Cargo.toml  Cargo.toml.work  INSTALL.md  INSTALLATION.md  LIBRARY_SEPARATION.md  LICENSE  LSP_README.md  Makefile  README.md  SEPARATION_COMPLETE.md  TODO.md  build.rs.template  build_deb.sh  debug_args  debug_args.rs  debug_args2  debug_args2.rs  debug_class.rs  debug_combined.rs  debug_expr.rs  debug_full.rs  debug_module_tokens.rs  debug_no_semicolon.rs  debug_parse.rs  debug_tokens.rs  debug_use_only.rs  debug_workflow.grease  grease.1  grease.1.new  grease.bash  grease.install  grease.zsh  install.sh  install_system.sh  test.grease  test_add.grease  test_array.grease  test_as_keyword.grease  (+78 more)
.cargo/: config.toml
build_tools/: README.md
build_tools/Linux/: install.sh
build_tools/any-linux/: README.md  install.sh  install_system.sh
build_tools/arch/: README.md
build_tools/arch/nightly/: PKGBUILD  PKGBUILD.binary
build_tools/archlinux/nightly/: PKGBUILD
build_tools/debian/: README.md  build_deb.sh
build_tools/rpm/: README.md  build_rpm.sh  grease.spec
build_tools/windows/: README.md  build_windows.sh
completions/: grease.zsh
docs/: CICD.md  INSTALL.md  LSP_README.md  MODULE_SETUP.md  PLATFORM_SETUP.md  TERMINAL_CALLS.md  TODO.md  TROUBLESHOOTING.md  UI_SYSTEM.md  grease.1
editors/: README.md
editors/neovim/: grease-lsp.lua
editors/vscode/: language-configuration.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: grease.tmLanguage.json
examples/: arithmetic.grease  basics.grease  comprehensive.grease  control_flow.grease  demo.grease  features.grease  final_test.grease  functions.grease  hello.grease  hybrid_ui_performance.grease  modules.grease  native.grease  no_comments.grease  oop.grease  package_example.grease  performance_example.grease  prime_calculator.grease  simple_demo.grease  simple_final.grease  system_integration.grease  terminal_calls.grease  terminal_calls_direct.grease  terminal_calls_simple.grease  test_math.grease  ui_example.grease  yt_dlp_integration.grease
grease-0.1.1/DEBIAN/: control  copyright
grease-0.1.1/usr/share/doc/grease/: control_flow.grease  hello.grease  inline_rust.grease  jit_example.grease  native.grease  oop_example.grease  package_manager_example.grease  ui_example.grease  webassembly_example.grease
grease-ui/: Cargo.toml  README.md
grease-ui/src/: lib.rs  theme.rs
grease-ui/src/platform/: android.rs  linux.rs  macos.rs  mod.rs  web.rs  windows.rs
grease-webassembly/: Cargo.toml  README.md
grease-webassembly/src/: lib.rs
src/: ast.rs  bytecode.rs  compiler.rs  grease.rs  jit.rs  lexer.rs  lexer.rs.backup  lib.rs  linter.rs  lsp_server.rs  lsp_workspace.rs  main.rs  module_communication.rs  module_errors.rs  module_loader.rs  native_system.rs  native_system_tests.rs  package.rs  package_manager.rs  parser.rs  performance.rs  repl.rs  token.rs  ui.rs  version_compat.rs  vm.rs  webassembly.rs
src/ui/: benchmark.rs  dioxus_integration.rs  mod.rs
std/: math.grease  string.grease  system.grease
tests/: system_integration_tests_backup.rs
