[package]
name = "grease"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_mangen = "0.2"
clap_complete = "4.0"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
ropey = "1.6"
toml = "0.8"
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"


[features]
default = []

[profile.release]
strip = "debuginfo"
