[package]
name = "grease-ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UI library for the Grease programming language"

[dependencies]
grease = { path = ".." }
libc = "0.2"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
gtk-sys = { version = "0.18", optional = true }
glib-sys = { version = "0.18", optional = true }
gobject-sys = { version = "0.18", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2", optional = true }
cocoa = { version = "0.25", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }



# UI dependencies (require system libraries on Linux)
dioxus = { version = "0.6", features = ["desktop"], optional = true }
dioxus-desktop = { version = "0.6", optional = true }
eframe = { version = "0.27", optional = true }
egui = { version = "0.27", optional = true }

[features]
default = []
ui = ["dioxus", "dioxus-desktop", "eframe", "egui"]
linux-ui = ["gtk-sys", "glib-sys", "gobject-sys"]
windows-ui = ["winapi"]
macos-ui = ["objc", "cocoa"]
android-ui = ["jni"]

full-ui = ["ui", "linux-ui", "windows-ui", "macos-ui", "android-ui"]

[lib]
name = "grease_ui"
crate-type = ["cdylib", "rlib"]