[package]
name = "grease-webassembly"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WebAssembly library for the Grease programming language"

[dependencies]
grease = { path = ".." }
libc = "0.2"
memmap2 = "0.9"

# WebAssembly-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Native dependencies for other platforms
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
web = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
native = ["serde", "serde_json"]
full = ["web", "native"]

[lib]
name = "grease_webassembly"
crate-type = ["cdylib", "rlib"]